# genswaptrades

./: LICENSE  README.md  setup.cfg
.github/workflows/: code-quality.yml  tests.yml
genswaptrades/: __init__.py  cli.py  trades.py
genswaptrades/tests/: __init__.py  tests.py
genswaptrades/tests/assets/: trades1.txt  trades2.csv  trades3.csv  trades4.txt  trades5.txt  trades6.csv  trades7.csv  trades8.txt  trades9.csv
