# to set version dynamically: https://github.com/pypa/setuptools/issues/1724#issuecomment-627241822

[metadata]
name = genswaptrades
version = attr: genswaptrades.__version__
author = attr: genswaptrades.__author__
author_email = marco.tazzari@gmail.com
description = A Python command-line utility that completes a series of interest rate swap trades to a zero-sum notional value and cashflow.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_files = LICENSE
include_package_data = False
url = https://github.com/mtazzari/genswaptrades
project_urls =
    Bug Tracker = https://github.com/mtazzari/genswaptrades/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    finance
    trading
    swap
    interest_rates

[options]
packages = genswaptrades

# python_requires docs: https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
python_requires = >=3.7

# PEP 440 - pinning package versions: https://www.python.org/dev/peps/pep-0440/#compatible-release
install_requires =
      numpy
      pandas

[options.extras_require]
test = 
    autopep8
    flake8
    pytest
    mypy

# configuring entry_points in setup.cfg:
# https://stackoverflow.com/questions/48884796/how-to-setup-entry-points-in-setup-cfg/48891252
[options.entry_points]
console_scripts =
    genswaptrades = genswaptrades.cli:main

